--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -30,8 +30,9 @@
   <body>
     <%- include("../includes/navbar.ejs") %>
 
-    <div class="container">
-      <%- include("../includes/flash.ejs") %> <%- body %>
+    <div class="container mt-2">
+      <%- include("../includes/flash.ejs") %> 
+      <%- body %>
     </div>
 
     <%- include("../includes/footer.ejs") %>
