--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -12,12 +12,11 @@
                 <div class="card listing-card">
                     <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing image">
                     <div class="card-body">
-                        <p class="card-text">
-                            <%= listing.description %> <br>
-                                &#8377 <%= listing.price.toLocaleString("en-IN") %> <br>
-                                    <%= listing.location %> <br>
-                                        <%= listing.country %> <br>
-                        </p>
+                        <p class="card-text">Owned by <b><i><%= listing.owner.username %></i></b></p>
+                        <p class="card-text"><%= listing.description %></p>  
+                        <p class="card-text">&#8377 <%= listing.price.toLocaleString("en-IN") %> </p>
+                        <p class="card-text"><%= listing.location %> </p>
+                        <p class="card-text"><%= listing.country %></p>   
                     </div>
                 </div>
             </div>
