--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,66 +1,83 @@
 <%- layout("/layouts/boilerplate.ejs") %>
 <body>
-    <div class="row mt-3">
-        <div class="col-8 offset-2">
-    <h2>Edit this Listing</h2>
-    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
+  <div class="row mt-3">
+    <div class="col-8 offset-2">
+      <h2>Edit this Listing</h2>
+      <form
+        method="POST"
+        action="/listings/<%= listing._id %>?_method=PUT"
+        novalidate
+        class="needs-validation"
+        enctype="multipart/form-data">
         <!-- title -->
         <div class="mb-3">
-            <lable for="title" class="form-lable">Titel</lable>
-            <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control" required>
-            <div class="valid-feedback">
-                Title Looks Good!!
-            </div>
-            <div class="invalid-feedback">
-                Title can't be empty
-            </div>
+          <lable for="title" class="form-lable">Titel</lable>
+          <input
+            name="listing[title]"
+            value="<%= listing.title %>"
+            type="text"
+            class="form-control"
+            required />
+          <div class="valid-feedback">Title Looks Good!!</div>
+          <div class="invalid-feedback">Title can't be empty</div>
         </div>
         <!-- description -->
         <div class="mb-3">
-            <lable for="description" class="form-lable">Description</lable>
-            <textarea name="listing[description]" class="form-control" required ><%= listing.description %></textarea>
-            <div class="valid-feedback">
-                Nice Description!!
-            </div>
+          <lable for="description" class="form-lable">Description</lable>
+          <textarea name="listing[description]" class="form-control" required>
+<%= listing.description %></textarea
+          >
+          <div class="valid-feedback">Nice Description!!</div>
+        </div>
+        <!-- image preview -->
+        <div class="mb-3">
+          Original Listing Image <br />
+          <img src="<%= originalImageUrl %>" alt="no image found" />
         </div>
         <!-- image -->
         <div class="mb-3">
-            <lable for="image" class="form-lable">Image Link</lable>
-            <input name="listing[image]" value="<%= listing.image %>" type="text" class="form-control" required>
-            <div class="invalid-feedback">
-                Enter a Valid img link
-            </div>
+          <lable for="image" class="form-lable">Upload New Image</lable>
+          <input name="listing[image]" type="file" class="form-control" />
         </div>
         <!-- row for price and country -->
         <div class="row">
-        <!-- price -->
-        <div class="mb-3 col-md-4">
+          <!-- price -->
+          <div class="mb-3 col-md-4">
             <lable for="price" class="form-label">Price</lable>
-            <input name="listing[price]" value="<%= listing.price %>" type="number" class="form-control" required>
-            <div class="invalid-feedback">
-                Enter Valid Price 
-            </div>
-        </div>
-        <!-- country -->
-        <div class="mb-3 col-md-8">
+            <input
+              name="listing[price]"
+              value="<%= listing.price %>"
+              type="number"
+              class="form-control"
+              required />
+            <div class="invalid-feedback">Enter Valid Price</div>
+          </div>
+          <!-- country -->
+          <div class="mb-3 col-md-8">
             <lable for="country" class="form-lable">Country</lable>
-            <input name="listing[country]" value="<%= listing.country %>" type="text" class="form-control" required>
-            <div class="invalid-feedback">
-                Enter a Valid Country Name
-            </div>
+            <input
+              name="listing[country]"
+              value="<%= listing.country %>"
+              type="text"
+              class="form-control"
+              required />
+            <div class="invalid-feedback">Enter a Valid Country Name</div>
+          </div>
         </div>
-    </div>
         <!-- location -->
         <div class="mb-3">
-            <lable for="location" class="form-lable">Location</lable>
-            <input name="listing[location]" value="<%= listing.location %>" type="text" class="form-control" required>
-            <div class="invalid-feedback">
-                Enter a Valid Location
-            </div>
+          <lable for="location" class="form-lable">Location</lable>
+          <input
+            name="listing[location]"
+            value="<%= listing.location %>"
+            type="text"
+            class="form-control"
+            required />
+          <div class="invalid-feedback">Enter a Valid Location</div>
         </div>
         <!-- button -->
         <button class="btn btn-dark edit-btn mt-1">Edit</button>
-    </form>
-</div>
-</div>
+      </form>
+    </div>
+  </div>
 </body>
