--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -7,7 +7,7 @@
         <% for(listing of allListings){ %>
             <a href="/listings/<%= listing._id %>" class="listing-link">
             <div class="card listing-card"  >
-                <img src="<%= listing.image %>" 
+                <img src="<%= listing.image.url %>" 
                 class="card-img-top" 
                 alt="listing image" 
                 style="height: 20rem;"
