--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,68 +1,95 @@
 <% layout("layouts/boilerplate.ejs") %>
 <body>
-    <br>
-    <div class="row mt-3">
+  <br />
+  <div class="row mt-3">
     <div class="col-8 offset-2">
-    <h2>Create New Listing</h2>
-    <form method="POST" action="/listings" novalidate class="needs-validation">
+      <h2>Create New Listing</h2>
+      <form
+        method="POST"
+        action="/listings"
+        novalidate
+        class="needs-validation"
+        enctype="multipart/form-data">
         <!-- title -->
         <div class="mb-3">
-            <lable for="title" class="form-lable">Titel</lable>
-            <input name="listing[title]" placeholder="enter title" type="text" class="form-control" required>
-            <div class="valid-feedback">
-                Title Looks Good!!
-            </div>
-            <div class="invalid-feedback">
-                Title can't be empty
-            </div>
+          <lable for="title" class="form-lable">Titel</lable>
+          <input
+            name="listing[title]"
+            placeholder="enter title"
+            type="text"
+            class="form-control"
+            required />
+          <div class="valid-feedback">Title Looks Good!!</div>
+          <div class="invalid-feedback">Title can't be empty</div>
         </div>
         <!-- description -->
         <div class="mb-3">
-            <lable for="description" class="form-lable">Description</lable>
-            <textarea name="listing[description]" class="form-control" required></textarea>
-            <div class="invalid-feedback">
-                Enter a Valid Description
-            </div>
-            <div class="valid-feedback">
-                Nice Description!!
-            </div>
+          <lable for="description" class="form-lable">Description</lable>
+          <textarea
+            name="listing[description]"
+            class="form-control"
+            required></textarea>
+          <div class="invalid-feedback">Enter a Valid Description</div>
+          <div class="valid-feedback">Nice Description!!</div>
         </div>
+        <!-- adding image through link/url 
+        <div class="mb-3">
+          <lable for="image" class="form-lable">Image Link</lable>
+          <input
+            name="listing[image]"
+            placeholder="enter image URL/link"
+            type="text"
+            class="form-control" />
+        </div> -->
         <!-- image -->
         <div class="mb-3">
-            <lable for="image" class="form-lable">Image Link</lable>
-            <input name="listing[image]" placeholder="enter image URL/link" type="text" class="form-control">
+          <lable for="image" class="form-lable">Upload Image</lable>
+          <input
+            name="listing[image]"
+            placeholder="enter image URL/link"
+            type="file"
+            class="form-control"
+            required />
         </div>
         <!-- row for price and country -->
         <div class="row">
-        <!--price  -->
-        <div class="mb-3 col-md-4">
+          <!--price  -->
+          <div class="mb-3 col-md-4">
             <lable for="price" class="form-label">Price</lable>
-            <input name="listing[price]" placeholder="enter price" class="form-control" required>
-            <div class="invalid-feedback">
-                Enter Valid Price 
-            </div>
-        </div>
-        <!-- country -->
-        <div class="mb-3 col-md-8">
+            <input
+              name="listing[price]"
+              placeholder="enter price"
+              class="form-control"
+              required />
+            <div class="invalid-feedback">Enter Valid Price</div>
+          </div>
+          <!-- country -->
+          <div class="mb-3 col-md-8">
             <lable for="country" class="form-lable">Country</lable>
-            <input name="listing[country]" placeholder="enter country" type="text" class="form-control" required>
-            <div class="invalid-feedback">
-                Enter a Valid Country Name
-            </div>
+            <input
+              name="listing[country]"
+              placeholder="enter country"
+              type="text"
+              class="form-control"
+              required />
+            <div class="invalid-feedback">Enter a Valid Country Name</div>
+          </div>
         </div>
-    </div>
         <!-- location -->
         <div class="mb-3">
-            <lable for="location" class="form-lable" required>Location</lable>
-            <input name="listing[location]" placeholder="enter location" type="text" class="form-control" required>
-            <div class="invalid-feedback">
-                Enter a Valid Location
-            </div>
+          <lable for="location" class="form-lable" required>Location</lable>
+          <input
+            name="listing[location]"
+            placeholder="enter location"
+            type="text"
+            class="form-control"
+            required />
+          <div class="invalid-feedback">Enter a Valid Location</div>
         </div>
         <!-- button -->
         <button class="btn btn-dark add-btn">Add</button>
-    </form>
-</div>
-</div>
-    <br><br>
+      </form>
+    </div>
+  </div>
+  <br /><br />
 </body>
