--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -10,7 +10,7 @@
             <!-- card col -->
             <div class="col-6 offset-3 show-card">
                 <div class="card listing-card">
-                    <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing image">
+                    <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing image">
                     <div class="card-body">
                         <p class="card-text">Owned by <b><i><%= listing.owner.username %></i></b></p>
                         <p class="card-text"><%= listing.description %></p>  
