--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -29,6 +29,11 @@
 
     <!-- css link for rating.css -->
     <link rel="stylesheet" href="/css/rating.css" />
+    <!-- css & js link for Maps -->
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v3.4.0/mapbox-gl.css"
+      rel="stylesheet" />
+    <script src="https://api.mapbox.com/mapbox-gl-js/v3.4.0/mapbox-gl.js"></script>
   </head>
   <body>
     <%- include("../includes/navbar.ejs") %>
