--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,5 +1,8 @@
 <% layout("/layouts/boilerplate.ejs") %>
-
+<script>
+    const mapToken = "<%= process.env.MAP_TOKEN %>";
+    const listing = <%- JSON.stringify(listing) %>
+</script>
 <body>
         <div class="row">
             <!-- heading col -->
@@ -71,9 +74,9 @@
             
             <!-- displaying reviews  -->
             <hr>
-            <p><b> All Reviews </b></p>
-    
-                <div class="row">
+            <% if(listing.reviews.length > 0){ %>
+            <div class="row">
+                    <p><b> All Reviews </b></p>
                 <% for(review of listing.reviews){ %>
                         <div class="card col-5 mb-3 ms-3">
                             <div class="card-body">
@@ -89,9 +92,14 @@
                             </div>
                         </div>
                         <% } %>
+                    </div>
+                    <% } %>
+                <div>
+                    <h3>Where you'll be</h3>
+                    <div id="map"></div>
                 </div>
-
         </div>
     </div>
 
+    <script src="/js/map.js"></script>
 </body>
