--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,7 +1,37 @@
+<style>
+  .search-btn {
+    background-color: #fe424d;
+    color: #fff;
+    border-radius: 25px;
+    padding: 0 1.5rem 0 1.5rem;
+  }
+
+  .search-btn i {
+    display: inline;
+    margin-right: 0.5rem;
+  }
+  .search-btn:hover {
+    background-color: #fe424d;
+    color: #fff;
+  }
+
+  .search-inp {
+    border-radius: 25px;
+    padding: 0.5rem 3rem 0.5rem 3rem;
+    font-size: 1rem;
+  }
+
+  .navbar-collapse {
+    background-color: #fff;
+  }
+</style>
+
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <!-- compas icon  -->
-    <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
+    <a class="navbar-brand" href="/listings"
+      ><i class="fa-regular fa-compass"></i
+    ></a>
     <button
       class="navbar-toggler"
       type="button"
@@ -14,18 +44,34 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" aria-current="page" href="/">Home</a>
-        <a class="nav-link" href="/listings">All Listings</a>
-        <a class="nav-link" href="/listings/new">New Listing</a>
+        <a class="nav-link" href="/listings">Explore</a>
       </div>
 
-      <!-- signup login logout btns -->
+      <!-- search input and button----------------------- -->
       <div class="navbar-nav ms-auto">
+        <form class="d-flex" role="search">
+          <input
+            class="form-control me-2 search-inp"
+            type="search"
+            placeholder="Search destinations"
+            aria-label="Search" />
+          <button class="btn search-btn" type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>Search
+          </button>
+        </form>
+      </div>
+
+      <!-- right elements -->
+      <div class="navbar-nav ms-auto">
+        <a class="nav-link" href="/listings/new">List your Home</a>
+        <!-- signup login logout btns -->
         <% if(!currentUser){ %>
-        <a class="nav-link" aria-current="page" href="/signup">Sign up</a>
-        <a class="nav-link" href="/login">Log in</a>
+        <a class="nav-link" aria-current="page" href="/signup"
+          ><b>Sign up</b></a
+        >
+        <a class="nav-link" href="/login"><b>Log in</b></a>
         <% } %> <% if(currentUser){ %>
-        <a class="nav-link" href="/logout">Log out</a>
+        <a class="nav-link" href="/logout"><b>Log out</b></a>
         <% } %>
       </div>
     </div>
