--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,3 +128,14 @@ body {
   border-radius: 50%;
   cursor: pointer;
 }
+
+@media only screen and (max-width: 420px) {
+  #map {
+    width: 220px;
+    height: 250px;
+  }
+
+  .edit-btn {
+    width: 4rem !important;
+  }
+}
