--- a/views/listings/rootPage.ejs
+++ b/views/listings/rootPage.ejs
@@ -43,19 +43,33 @@
       }
 
       #main {
-        height: 80vh;
+        height: 78vh;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        align-items: center;
+        /* align-items: center; */
         background-color: #fe424d;
       }
 
       #main h1 {
+        margin-top: 11rem;
         color: #fff;
         font-size: 3rem;
         font-weight: bold;
         text-align: center;
+      }
+
+      .explore-btn {
+        background-color: #fff;
+        font-weight: bold;
+        margin-bottom: 15rem;
+        color: black;
+        /* display: inline; */
+      }
+
+      .explore-btn-link {
+        text-decoration: none;
+        color: black;
       }
     </style>
 
@@ -102,7 +116,12 @@
     <!-- main -->
     <div id="main">
       <h1>Welcome to Traveling-Agent</h1>
+
+      <a href="/listings" class="explore-btn-link">
+        <button class="btn btn-outline-dark explore-btn">Explore</button>
+      </a>
     </div>
+
     <!-- footer -->
     <%- include("../includes/footer.ejs") %>
 
