--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -31,7 +31,7 @@
 
             <!-- delete button -->
             <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-                <button class="btn btn-dark offset-5">Delete</button>
+                <button class="btn btn-dark del-btn offset-5">Delete</button>
             </form>
         </div>
         <% } %>
