--- a/views/listings/rootPage.ejs
+++ b/views/listings/rootPage.ejs
@@ -46,13 +46,13 @@
         height: 78vh;
         display: flex;
         flex-wrap: wrap;
+        flex-direction: column;
         justify-content: center;
-        /* align-items: center; */
+        align-items: center;
         background-color: #fe424d;
       }
 
       #main h1 {
-        margin-top: 11rem;
         color: #fff;
         font-size: 3rem;
         font-weight: bold;
@@ -60,16 +60,30 @@
       }
 
       .explore-btn {
+        margin-top: 2rem;
         background-color: #fff;
         font-weight: bold;
-        margin-bottom: 15rem;
         color: black;
-        /* display: inline; */
       }
 
       .explore-btn-link {
         text-decoration: none;
         color: black;
+      }
+
+      @media only screen and(max-width: 420px) {
+        .explore-btn {
+          background-color: #fff;
+          font-weight: bold;
+          margin-bottom: 15rem;
+          color: black;
+          /* display: inline; */
+        }
+
+        .explore-btn-link {
+          text-decoration: none;
+          color: black;
+        }
       }
     </style>
 
